[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dam"
version = "1.0.0"
description = "Describe Anything Model (DAM)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "torch>=2.1.0",
    "torchvision",
    "transformers>=4.45.0",
    "tokenizers>=0.20.0",
    "sentencepiece",
    "accelerate>=0.34.0",
    "pydantic>=2.10.1",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "gradio>=5.5.0",
    "requests",
    "httpx",
    "uvicorn",
    "fastapi",
    "protobuf",
    "opencv-python",
    "openai>=1.55.0",
]

[project.optional-dependencies]
train = ["deepspeed>=0.14.0", "ninja", "wandb"]
eval = [
    "pycocotools",
    "matplotlib",
]
sam = ["segment-anything @ git+https://github.com/facebookresearch/segment-anything.git"]
sam2 = ["sam-2 @ git+https://github.com/facebookresearch/sam2.git"]

[project.scripts]
dam-video-demo = "demo_video:main"

[tool.hatch.build.targets.wheel]
packages = ["dam"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
